# emotion_ai

./: .gitignore  .gitkeep  BACKEND_API_SPEC.md  README.md  cleanup_git_database_files.sh  deprecated_use_backend.env.example  index.css  index.html  index.tsx  index_backup.tsx  metadata.json  package-lock.json  package.json  start_full_system.bat  start_full_system.sh  stop_full_system.bat  stop_full_system.sh  test_aura_parameter_fix.py  test_aura_server_fix.py  test_comprehensive_fixes.py  test_mcp_bridge_fix.py  test_tool_improvements.py  test_ui_improvements.py
aura_backend/: .env.example  .gitignore  .gitkeep  AUTONOMIC_SYSTEM_GUIDE.md  DATABASE_PROTECTION_GUIDE.md  Dockerfile  INTEGRATION_SUCCESS.md  MEMVID_CRASH_FIX_SUMMARY.md  REFACTOR_PLAN.md  STARTUP_GUIDE.md  THINKING_GUIDE.md  WHAT_WAS_ACTUALLY_CHANGED.md  activate_env.sh  add-api-key-and-rename-.env.txt  aura-backend.service  aura_as_mcp_config.json  aura_as_mcp_server.py  aura_autonomic_system.py  aura_intelligent_memory_manager.py  aura_internal_memvid_tools.py  aura_internal_tools.py  aura_memvid_compatible_fixed.py  aura_memvid_hybrid.py  aura_memvid_mcp_tools.py  aura_memvid_mcp_tools_compatible_fixed.py  aura_memvid_setup.py  aura_real_memvid.py  aura_real_memvid_original.py  aura_server.py  cleanup_chromadb.py  conversation_persistence_service.py  database_protection.py  demo_memvid_integration.py  diagnose_memory_manager.py  docker-compose.yml  enhanced_vector_db.py  example_mcp_client_config.json  fix_chromadb_conflict.sh  install_mcp_deps.sh  integrate_memvid.py  (+45 more)
aura_backend/archive_unused/: ARCHITECTURE.md  MEMVID_COMPATIBLE_GUIDE.md  (+39 more)
(+47 files in other folders)
