[project]
name = "aura-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio-mqtt>=0.16.2",
    "chromadb>=0.5.23",
    "fastapi>=0.115.6",
    "fastmcp>=2.5.2",
    "google-genai>=1.17.0",
    "google-generativeai>=0.8.3",
    "httpx>=0.28.1",
    "mcp>=1.1.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.3.1",
    "torch==2.7.0",
    "uvicorn>=0.34.0",
    "websockets>=14.1",
]
